--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,4 +1,9 @@
 redis.address=192.168.1.170
 redis.port=6379
+
 redis.max-conn=1000
+redis.min-idle=10
+redis.max-idle=1000
+redis.max-wait=30000
+
 redis.session.key=QUEUE
