--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -5,5 +5,6 @@ redis.max-conn=1000
 redis.min-idle=10
 redis.max-idle=1000
 redis.max-wait=30000
+redis.max-idle-alive=600000
 
 redis.session.key=QUEUE
